--- a/Views/Store/Category.cshtml
+++ b/Views/Store/Category.cshtml
@@ -11,7 +11,7 @@
     <div class="mb-2 mr-auto goback-wrapper">
       <a href="@Url.ActionLink("Index", "Home")">
         <i class="fas fa-arrow-left md ms-0 ms-md-5 nohover" style="opacity:1;color:var(--main-text-color-hover)"></i>
-        <span class="" style="display: inline-block;color:var(--main-text-color-hover)">назад</span>
+        <span class="" style="display: inline-block;color:var(--main-text-color-hover)">главная</span>
       </a>
     </div>
   </div>
