--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -2,6 +2,11 @@
 
 <div class="row">
   <h1 class="text-center">@ViewData["Title"]</h1>
+  <div hidden>
+    Yakutsa - российский бренд уличной одежды.
+    Мы совмещаем стрит-веар и аниме принты с футуристичными киберпанковыми элементами. Мы создаём для Вас удобные модели худи и футболок, которые прослужат долгое время за счёт качественных материалов и новейшего способа нанесения авторского рисунка.
+    Доставка по всему миру.
+  </div>
 </div>
 
 <div class="container p-0">
