--- a/Views/Admin/Product.cshtml
+++ b/Views/Admin/Product.cshtml
@@ -7,7 +7,7 @@
 <div class="container p-0">
   <div class="row">
     <div class="col-sm-12">
-      @using (Html.BeginForm("Product", "Admin", FormMethod.Post))
+      @using (Html.BeginForm("Product", "Admin", FormMethod.Post, new { onsubmit = "((evt) => { sendAjaxForm(evt.target, '/Admin/Product/', (response)=>{ if(response.Success) location.reload();}, true); evt.preventDefault();})(event)" }))
       {
         @Html.HiddenFor(e => e.id)
         @Html.HiddenFor(e => e.createdAt)
