--- a/Views/Home/DeliveryRules.cshtml
+++ b/Views/Home/DeliveryRules.cshtml
@@ -5,7 +5,7 @@
   <div class="row text-content">
     <div class="col-xl-12 mx-auto">
       <p>
-        После оплаты товара мы начинаем его производство. Срок производства зависит от наличия комплектующих и занимает от 5 до 30 дней, по завершению производства заказ передается в службы доставки.
+        После подтверждения и оплаты заказа мы начинаем производство, срок изготовления до 5 рабочих дней, по завершению производства заказ передается в службу доставки.
         <br>
         <br>
         Доставка по Москве (в пределах МКАД) <br>
